style fix for flash notifications, if the bottom menu wrapped on two or more lines flashes would appear in the wrong place

--- a/tagger/public/themes/default/css/style.css
+++ b/tagger/public/themes/default/css/style.css
@@ -298,7 +298,6 @@ table td.icon {
 /* Flash */
 #flash {
     position: relative;
-    top: -25px;
     color: white;
 }
 
@@ -306,7 +305,7 @@ table td.icon {
     position: absolute;
     padding:10px 60px 10px 45px;
     z-index: 4;
-    opacity: .8;
+    opacity: .9;
 	border-radius: 0 0 10px 10px;
 	-moz-border-radius: 0 0 10px 10px;
 	-webkit-border-radius: 0 0 10px 10px;
